--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+logs/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -63,3 +64,5 @@ hs_err_pid*
 replay_pid*
 
 .idea/
+
+
